# libherd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  sonar-project.properties
.github/workflows/: codeql-scan.yml  sonar.yml  ubuntu.yml
cmake/: Findlibclang.cmake
example/: CMakeLists.txt
example/authorization/: CMakeLists.txt  main.cpp
example/data_frame_upload/: CMakeLists.txt  main.cpp
example/key_upload/: CMakeLists.txt  main.cpp
example/session_manipulation/: CMakeLists.txt  main.cpp
example/task_scheduling/: CMakeLists.txt  main.cpp
example/utils/: key.hpp
include/herd/: herd.hpp  operation.hpp  type.hpp  uuid.hpp
include/herd/backend/: i_backend.hpp
include/herd/backend/remote/: remote_backend.hpp  tree_dump.hpp
include/herd/backend/remote/detail/: mapper.hpp  remote_backend_connection_impl.hpp
include/herd/computing_provider/: i_computing_provider.hpp
include/herd/computing_provider/local/: local_computing_provider.hpp
include/herd/computing_provider/remote/: tree_dump.hpp
include/herd/context/: context.hpp  context_builder.hpp
include/herd/crypto/: binfhe_keyset.hpp  ciphertext.hpp  crypto.hpp  crypto_config.hpp  crypto_factory.hpp  i_crypto.hpp  i_keyset.hpp  keyring.hpp  keyset.hpp  schema.hpp
include/herd/crypto/binfhe/: binfhe.hpp
include/herd/crypto/binfhe/detail/: ciphertext.hpp  crypto.hpp  keyset.hpp
include/herd/data_storage/: data_frame.hpp  data_storage.hpp  data_table.hpp  i_data_row.hpp
include/herd/data_storage/local/: local_data_frame.hpp  local_data_storage.hpp  local_data_table.hpp  type_pool.hpp  type_pool_factory.hpp
include/herd/data_storage/remote/: remote_data_frame.hpp  remote_data_storage.hpp  remote_data_table.hpp
include/herd/executor/: i_executor.hpp  job.hpp
include/herd/executor/remote/: executor.hpp  job.hpp
include/herd/executor/remote/detail/: executor.hpp  job.hpp
include/herd/session/: session.hpp
include/herd/storage/: data_frame.hpp  data_storage.hpp  i_data_row.hpp  import_options.hpp
include/herd/storage/local/: type_pool_factory.hpp
include/herd/storage/local/detail/: data_frame.hpp  data_storage.hpp
include/herd/storage/remote/detail/: data_frame.hpp  data_storage.hpp
include/herd/translator/: exception.hpp  i_translator.hpp
include/herd/translator/common/tree/: circuit.hpp  circuit_graph.hpp  visitor.hpp
include/herd/translator/common/tree/node/: abstract_node.hpp  input_node.hpp  nodes.hpp  operation_node.hpp  output_node.hpp
include/herd/translator/xlscc/detail/: compiler.hpp  ir_parser.hpp  ir_transpiler.hpp  source_analyzer.hpp  translator.hpp
include/herd/tree/: circuit_graph.hpp  visitor.hpp
include/herd/tree/node/: abstract_node.hpp  input_node.hpp  operation_node.hpp  output_node.hpp
include/herd/utils/: csv_reader.hpp  csv_value_mappers.hpp  movable_function.hpp  movable_task.hpp  path.hpp  pimpl.hpp  progress_bar.hpp  progress_future.hpp  string_utils.hpp  temp_storage.hpp  thread_pool.hpp
proto/: ciphertext_value.proto  circuit_graph.proto  node.proto  task.proto
src/: uuid.cpp
src/backend/remote/: remote_backend.cpp  tree_dump.cpp
src/backend/remote/detail/: mapper.cpp  remote_backend_connection_impl.cpp
src/computing_provider/local/: local_computing_provider.cpp
src/computing_provider/remote/: tree_dump.cpp
src/context/: context.cpp  context_builder.cpp
src/crypto/: binfhe_keyset.cpp  crypto.cpp  crypto_factory.cpp  keyring.cpp  keyset.cpp
src/crypto/binfhe/: binfhe.cpp
src/crypto/binfhe/detail/: ciphertext.cpp  crypto.cpp  keyset.cpp
src/data_storage/: data_frame.cpp  data_storage.cpp  data_table.cpp  i_data_row.cpp
src/data_storage/local/: local_data_frame.cpp  local_data_storage.cpp  local_data_table.cpp  type_pool_factory.cpp
src/data_storage/remote/: remote_data_frame.cpp  remote_data_storage.cpp  remote_data_table.cpp
src/executor/: job.cpp
src/executor/remote/: executor.cpp  job.cpp
src/executor/remote/detail/: executor.cpp  job.cpp
src/session/: session.cpp
src/storage/: data_frame.cpp  data_storage.cpp  i_data_row.cpp  import_options.cpp
src/storage/local/: type_pool_factory.cpp
src/storage/local/detail/: data_frame.cpp  data_storage.cpp
src/storage/remote/detail/: data_frame.cpp  data_storage.cpp
src/translator/common/tree/: circuit_graph.cpp  visitor.cpp
src/translator/xlscc/detail/: ir_parser.cpp  ir_transpiler.cpp  source_analyzer.cpp  translator.cpp
src/tree/: circuit_graph.cpp  visitor.cpp
src/utils/: csv_reader.cpp  path.cpp  progress_bar.cpp  string_utils.cpp  temp_storage.cpp  thread_pool.cpp
test/: CMakeLists.txt
test/storage/local/: local_data_storage_test.cpp
test/translator/xlscc/: ir_parser_test.cpp  ir_transpiler_test.cpp  translator_test.cpp
test/utils/: csv_reader_test.cpp  csv_value_mappers_test.cpp  progress_bar_test.cpp  thread_pool.cpp
